adding in code to create mongodb with a quotes_db database and two collections names authors and quotes

--- a/scrape.ipynb
+++ b/scrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "from bs4 import BeautifulSoup\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "import requests\n",
-    "import unidecode"
+    "import unidecode\n",
+    "import pymongo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +40,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - Driver [/Users/carter/.wdm/drivers/chromedriver/mac64/89.0.4389.23/chromedriver] found in cache\n"
+      "[WDM] - Get LATEST driver version for 89.0.4389\n",
+      "[WDM] - Trying to download new driver from https://chromedriver.storage.googleapis.com/89.0.4389.23/chromedriver_mac64.zip\n",
+      "[WDM] - Driver has been saved in cache [/Users/carter/.wdm/drivers/chromedriver/mac64/89.0.4389.23]\n"
      ]
     }
    ],
@@ -50,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,12 +117,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertManyResult at 0x7fb4ab0b0040>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#MongoDB\n",
-    "#Need to add author_data and data to mongoDB connection"
+    "#Need to add author_data and data to mongoDB connection\n",
+    "conn = 'mongodb://localhost:27017'\n",
+    "client = pymongo.MongoClient(conn)\n",
+    "db = client['quotes_db']\n",
+    "authors = db.authors\n",
+    "quotes = db.quotes\n",
+    "authors.insert_many(author_data)\n",
+    "quotes.insert_many(data)"
    ]
   }
  ],
