cleaned up author name cleaning

--- a/scrape.ipynb
+++ b/scrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,8 @@
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "import requests\n",
     "import unidecode\n",
-    "import pymongo"
+    "import pymongo\n",
+    "import re"
    ]
   },
   {
@@ -103,10 +104,9 @@
    "source": [
     "author_data = []\n",
     "for author in authors:\n",
-    "    author_ = unidecode.unidecode(author)\n",
-    "    chars = [' ','.','--']\n",
-    "    for char in chars:\n",
-    "        author_ = author_.replace(char,'-')\n",
+    "    #regex to replace any period(.) or space( ) with a hyphen(-), avoids putting in double hyphens(--) when there is a period and a space\n",
+    "    cleaned = unidecode.unidecode(re.sub(r'\\. | |\\.','-',author))\n",
+    "    author_ = cleaned if cleaned[-1] != '-' else cleaned[:-1]\n",
     "\n",
     "    soup = BeautifulSoup(requests.get(f\"http://quotes.toscrape.com/author/{author_}\").text,'html.parser')\n",
     "    born = soup.find('span',class_='author-born-date').text\n",
