adding some comments

--- a/scrape.ipynb
+++ b/scrape.ipynb
@@ -79,6 +79,7 @@
     "        q = quote.find('span',class_='text').text\n",
     "        author = quote.find('small',class_='author').text\n",
     "        tags = quote.find_all('a', class_='tag')\n",
+    "        #Adds tags to list\n",
     "        for tag in tags:\n",
     "            tag_list.append(tag.text)\n",
     "        authors.add(author)\n",
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +108,7 @@
     "    #regex to replace any period(.) or space( ) with a hyphen(-), avoids putting in double hyphens(--) when there is a period and a space\n",
     "    cleaned = unidecode.unidecode(re.sub(r'\\. | |\\.','-',author))\n",
     "    author_ = cleaned if cleaned[-1] != '-' else cleaned[:-1]\n",
-    "\n",
+    "    #scrapes quotes urls based on cleaned author name\n",
     "    soup = BeautifulSoup(requests.get(f\"http://quotes.toscrape.com/author/{author_}\").text,'html.parser')\n",
     "    born = soup.find('span',class_='author-born-date').text\n",
     "    description = soup.find('div', class_='author-description').text.strip()\n",
@@ -133,7 +134,7 @@
    ],
    "source": [
     "#MongoDB\n",
-    "#Need to add author_data and data to mongoDB connection\n",
+    "#Adds data scraped above into MongoDB\n",
     "conn = 'mongodb://localhost:27017'\n",
     "client = pymongo.MongoClient(conn)\n",
     "db = client['quotes_db']\n",
