--- a/scrape_02.ipynb
+++ b/scrape_02.ipynb
@@ -78,7 +78,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "author_data = []\n",
