fixing error where ' was missed in author name clean up

--- a/scrape.ipynb
+++ b/scrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,9 +41,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - Get LATEST driver version for 89.0.4389\n",
-      "[WDM] - Trying to download new driver from https://chromedriver.storage.googleapis.com/89.0.4389.23/chromedriver_mac64.zip\n",
-      "[WDM] - Driver has been saved in cache [/Users/carter/.wdm/drivers/chromedriver/mac64/89.0.4389.23]\n"
+      "[WDM] - Driver [/Users/carter/.wdm/drivers/chromedriver/mac64/89.0.4389.23/chromedriver] found in cache\n"
      ]
     }
    ],
@@ -54,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,13 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = []\n",
     "authors = set()\n",
-    "while(browser.links.find_by_partial_text('Next ')):\n",
+    "nextpage = 1\n",
+    "while(nextpage):\n",
     "    html = browser.html\n",
     "    # Parse HTML with Beautiful Soup\n",
     "    soup = BeautifulSoup(html, 'html.parser')\n",
@@ -85,12 +84,15 @@
     "        authors.add(author)\n",
     "    #Add data to dictionary to add to MongoDB later\n",
     "        data.append({'author_name':author,'quote':q,'tags': tag_list})\n",
-    "    browser.links.find_by_partial_text('Next ').click()"
+    "    if browser.links.find_by_partial_text('Next '):\n",
+    "        browser.links.find_by_partial_text('Next ').click()\n",
+    "    else:\n",
+    "            nextpage=0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,14 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "author_data = []\n",
     "for author in authors:\n",
     "    #regex to replace any period(.) or space( ) with a hyphen(-), avoids putting in double hyphens(--) when there is a period and a space\n",
-    "    cleaned = unidecode.unidecode(re.sub(r'\\. | |\\.','-',author))\n",
+    "    cleaned = unidecode.unidecode(re.sub(r'\\. | |\\.','-',author)).replace('\\'','')\n",
     "    author_ = cleaned if cleaned[-1] != '-' else cleaned[:-1]\n",
     "    #scrapes quotes urls based on cleaned author name\n",
     "    soup = BeautifulSoup(requests.get(f\"http://quotes.toscrape.com/author/{author_}\").text,'html.parser')\n",
@@ -118,16 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fb4ab0b0040>"
+       "<pymongo.results.InsertManyResult at 0x7f95fc342480>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
